test/expected/declare_th_f_v.out
declare f as throw function
        ^
9: error: "throw" not supported since C++17; did you mean "noexcept"?
